JavaScript (v3): Kinesis - Replace web example with single action
The previous example was not configured with server-side encryption,
which is the recommended best practice. It was also a web example
that only showcase one SDK call, which we have decided doesn't meet
the bar of a good example. This replaces the web example with a
a single-action nodejs example and provides updated CDK/CFN scripts.

--- a/.doc_gen/metadata/kinesis_metadata.yaml
+++ b/.doc_gen/metadata/kinesis_metadata.yaml
@@ -231,6 +231,19 @@ kinesis_PutRecord:
                 - kns.abapv1.put_record
   services:
     kinesis: {PutRecord}
+kinesis_PutRecords:
+  languages:
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/kinesis
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_files:
+                - javascriptv3/example_code/kinesis/actions/put-records.js
+  services:
+    kinesis: {PutRecords}
 kinesis_GetRecords:
   languages:
     Java:
