--- a/javascriptv3/.eslintignore
+++ b/javascriptv3/.eslintignore
@@ -1,2 +1,3 @@
 /example_code/reactnative/
 /example_code/medical-imaging/scenarios/health-image-sets/pixel-data-verification
+/example_code/kinesis/kinesis-cdk
