--- a/.doc_gen/metadata/redshift_metadata.yaml
+++ b/.doc_gen/metadata/redshift_metadata.yaml
@@ -212,32 +212,6 @@ redshift_ModifyCluster:
                 - python.example_code.redshift.RedshiftWrapper.instantiation
   services:
     redshift: {ModifyCluster}
-redshift_Insert:
-  languages:
-    Java:
-      versions:
-        - sdk_version: 2
-          github: javav2/example_code/redshift
-          sdkguide:
-          excerpts:
-            - description:
-              snippet_tags:
-                - redshiftdata.java2.add.record.main
-  services:
-    redshift: {Insert}
-redshift_Query:
-  languages:
-    Java:
-      versions:
-        - sdk_version: 2
-          github: javav2/example_code/redshift
-          sdkguide:
-          excerpts:
-            - description: Query a table.
-              snippet_tags:
-                - redshiftdata.java2.query.main
-  services:
-    redshift: {Query}
 redshift_DescribeStatement:
   languages:
     Java:
@@ -298,9 +272,15 @@ redshift_ExecuteStatement:
           github: javav2/example_code/redshift
           sdkguide:
           excerpts:
-            - description: 
+            - description: Executes a SQL statement to create a database table.
               snippet_tags:
                 - redshiftdata.java2.execute_statement.main
+            - description: Executes a SQL statement to insert data into a database table.
+              snippet_tags:
+                - redshiftdata.java2.add.record.main 
+            - description: Executes a SQL statement to query a database table.
+              snippet_tags:
+                - redshiftdata.java2.query.main      
     Python:
       versions:
         - sdk_version: 3
