JavaScript (v3): Kinesis - Update CDK/CFN deletion policy to delete stream on stack deletion.

--- a/javascriptv3/example_code/kinesis/stack.yaml
+++ b/javascriptv3/example_code/kinesis/stack.yaml
@@ -34,8 +34,8 @@ Resources:
           Fn::GetAtt:
             - ExampleStreamKeyBB67426B
             - Arn
-    UpdateReplacePolicy: Retain
-    DeletionPolicy: Retain
+    UpdateReplacePolicy: Delete
+    DeletionPolicy: Delete
     Metadata:
       aws:cdk:path: KinesisCdkStack/ExampleStream/Resource
   CDKMetadata:
