JavaScript (v3): Tests - Silence console output during full unit test run.

--- a/javascriptv3/package.json
+++ b/javascriptv3/package.json
@@ -2,7 +2,7 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "test": "npm run test --workspaces --if-present",
+    "test": "npm run test --workspaces --if-present -- --silent",
     "integration-test": "npm run integration-test --workspaces --if-present -- --silent; exit_code=$?; npm run merge-test-results; npm run log-tests; exit ${exit_code:-99}",
     "merge-test-results": "jrm test-results.xml \"**/test_results/**/*.junit.xml\"",
     "log-tests": "cat test-results.xml",
