--- a/.github/workflows/lint-python.yml
+++ b/.github/workflows/lint-python.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install black pylint
+          pip install black==23.9.1 pylint
 
       - name: Run Black & Pylint
         if: steps.changed-files.outputs.any_changed == 'true'
