--- a/.github/workflows/lint-javascript.yml
+++ b/.github/workflows/lint-javascript.yml
@@ -16,6 +16,7 @@ jobs:
           sparse-checkout: |
             .github
             javascriptv3
+            workflows
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v41
@@ -37,3 +38,6 @@ jobs:
         run: |
           changed_files=(${{steps.changed-files.outputs.all_changed_files}})
           ./javascriptv3/github_scripts/lint.sh "${changed_files[@]}"
+      - name: Run unit tests
+        if: steps.changed-files.outputs.any_changed == 'true'
+        run: npm test --prefix javascriptv3
