JavaScript (v3): Lint - Add eslint-disable to files that haven't been touched since the linter was turned on.

--- a/javascriptv3/.eslintignore
+++ b/javascriptv3/.eslintignore
@@ -1,3 +1,4 @@
 /example_code/reactnative/
 /example_code/medical-imaging/scenarios/health-image-sets/pixel-data-verification
 /example_code/kinesis/kinesis-cdk
+**/dist
