--- a/.github/linters/.ruby-lint.yml
+++ b/.github/linters/.ruby-lint.yml
@@ -3,18 +3,21 @@
 # Rubocop Config file #
 #######################
 Metrics/MethodLength:
-  Max: 25
+  Max: 50
+Layout/LineLength:
+  Max: 150
 Metrics/BlockLength:
-  Max: 75
+  Max: 150
 Metrics/AbcSize:
-  Max: 20
+  Enabled: false
+Metrics/PerceivedComplexity:
+  Enabled: false
+Metrics/CyclomaticComplexity:
+  Enabled: false
 Style/FrozenStringLiteralComment:
   Enabled: false
 Layout/EndOfLine:
   Enabled: false
-Layout/LineLength:
-  Exclude:
-    - ruby/example_code/kms/decrypt_data.rb
 Naming/FileName:
   Enabled: false
 Style/HashSyntax:
